Mon Jul  6 12:06:23 BST 1998  Tony Gale  <gale@gtk.org>

	* docs/gtkfaq.sgml: update anon CVS info

Sat Jul  4 13:16:24 1998  Tim Janik  <timj@gtk.org>

	* gtk/*.c: changed reversed_[12] to reserved_[12] in gtk_*_get_type
 	functions.

	* gdk/gdkwindow.c:
	* gdk/gdkvisual.c: check for some pointer values to be != NULL, prior
	to XFree() calls.

1998-07-03  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkfeatures.h.in: Added GDK_HAVE_FULL_CROSSING_EVENT, since
	I seem to have erroneously added it to gtkfeatures.h (not .h.in).

Fri Jul  3 14:55:31 PDT 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkfeatures.h.in: added GTK_HAVE_RELIEF_STYLE

Wed Jul  1 20:58:46 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkwidget.h:
	* gtk/gtkwidget.c: temporary implementation of action signal "debug_msg"

	* gtk/gtkbindings.c (gtk_binding_entry_add_signal): fixed an off-by-one
	error that prevented signal to entry addition for signals with
 	parameters.

Wed Jul  1 10:05:36 PDT 1998 Manish Singh <yosh@gimp.org>

	* ltconfig: fix for properly detecting shared lib support on
	SunPro cc (taken from libtool 1.2.a)

Wed Jul  1 03:33:30 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkrc.c: implementation of the "class" keyword for styles.

Tue Jun 30 14:30:37 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkrc.c: fixed lookup order for rc styles. the latest defined
	rc set pattern is favoured, this is needed for overriding of style
	patterns with subsequently parsed rc files.

Tue Jun 30 12:45:19 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkrc.c: code overhaul for simplicity and more descriptive
	error messages.

Tue Jun 30 09:24:40 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkaccelgroup.c (gtk_accelerator_parse): parse "<Release>"
	modifier as well.
	(gtk_accelerator_name): add "<Release>" to the accelerator name if
	neccessary.

	* gtk/gtkbindings.c (BINDING_MOD_MASK): take BINDING_MOD_MASK into
 	account.

	* gtk/gtkwidget.c (gtk_widget_real_key_release_event): implemented