@@ -206,9 +206,6 @@ Additions:
    cause confusing presses to be sent to containers that actually
    want to get events on themselves.
 
- * Buttons's should derive from Bin's. (GTK 2.0 change, breaks
-   lots of stuff)
-
  * New signals to handle accelerators: accel_before and accel_after (or
    somesuch) to pre and post process accelerator calls. [Yosh]
 
